# ama_upow2_ex

./: .gitignore  README.md  mix.exs
lib/: ama_upow2_ex.ex  upow2_native.ex
native/ama_upow2/: Cargo.toml
native/ama_upow2/src/: main.rs  upow2.rs
native/ama_upow2_ex/: Cargo.toml
native/ama_upow2_ex/src/: lib.rs
test/: ama_upow2_ex_test.exs
