[package]
name = "ama_upow2_ex"
version = "0.1.0"
edition = "2024"

[lib]
name = "ama_upow2_ex"
# build as a cdylib so Rustler can load it
crate-type = ["cdylib"]
src = "src/lib.rs"

[features]
default = ["blake3/default", "blake3/rayon"]
neon = ["blake3/neon"]
rayon = ["blake3/rayon"]

[dependencies]
bincode = "2.0.1"
blake3 = "1.0"
rand = "0.9.2"
once_cell = "1.21.3"
rustler = "0.36.1"
rustler_codegen = "0.36.1"
